# oilbulletin

./: .gitignore  evolucion_precio_gasoil.xlsx  gasoil_mensual.ipynb  main.py  pyproject.toml
