[tool.poetry]
name = "Weekly EC Oil Bulletin Downloader"
version = "0.1.0"
description = ""
authors = ["Tony M. Jenkins <tonymj@proton.me>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.5"
openpyxl = "^3.0.9"
PyPDF2 = "^2.10.6"
XlsxWriter = "^3.0.2"
xlrd = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"